# rust-python-interop-demo

./: .gitignore  Cargo.toml  README.md  pyproject.toml  pyvenv.cfg
src/: demo1.rs  lib.rs  main.rs
tests/: pytest.py  shared_struct.py
